--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 *.xcuserstate
 *.xcuserstate
+JLPT quiz practice MVVM.xcodeproj/project.xcworkspace/xcuserdata/muyu.xcuserdatad/UserInterfaceState.xcuserstate
