--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.xcuserstate
 *.xcuserstate
 JLPT quiz practice MVVM.xcodeproj/project.xcworkspace/xcuserdata/muyu.xcuserdatad/UserInterfaceState.xcuserstate
+JLPT quiz practice MVVM.xcodeproj/project.xcworkspace/xcuserdata/muyu.xcuserdatad/UserInterfaceState.xcuserstate
